--- a/tanmoy.css
+++ b/tanmoy.css
@@ -61,6 +61,9 @@ nav a:hover{
     header img{
         margin-right: 0px;
     }
+    header h1{
+        margin-left:-10px;
+    }
 }
 
 .child img{
